--- a/LOO_projeto/nbproject/project.properties
+++ b/LOO_projeto/nbproject/project.properties
@@ -33,7 +33,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${file.reference.postgresql-9.2-1002.jdbc4.jar}
+    ${file.reference.postgresql-9.2-1002.jdbc4.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
