--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Temporary Items
 /LOO_projeto/dist/
 /LOO_projetoTeste/nbproject/private/
 /LOO_ProjetoTeste/nbproject/private/
+/LOOThread/nbproject/private/
